<resources>
    <string name="app_name">UI-Demo</string>
    <string name="linearLayout">Linear Layout</string>
    <string name="relativeLayout">Relative Layout</string>
    <string name="productId">Produkt-ID</string>
    <string name="amount">Menge</string>
    <string name="specialPrice">Sondertarif</string>
    <string name="calculatePrice">Preis berechnen</string>
    <string name="priceDisclaimer">Preisangaben ohne Gewähr</string>
    <string name="verticalLinearLayout">Ich bin ein vertikales LinearLayout</string>
    <string name="horizontalLinearLayout">Ich bin ein horizontales LinearLayout</string>
    <string name="title">HSLU - Mobile Programming</string>
    <string name="welcome">Willkommen zum zweiten Kursblock!</string>
    <string name="layoutTitle">1. Layout</string>
    <string name="layoutText">Wähle eines der folgenden Layouts für eine Demo</string>
    <string name="orientationTitle">2. Screen-Orientation und Übersetzung</string>
    <string name="orientationText">Diese Seite hat ein angepasstes Layout für Landscape Mode. Probier es aus! Ausserdem kann sie auch Schweizerdeutsch. Stelle die Sprache im Emulator auf Deutsch (Schweiz) um, und starte die App erneut</string>
    <string name="viewsTitle">3. Views und Events</string>
    <string name="viewsButtonText">Seite mit Views Demos anzeigen</string>
    <string name="rating">Bewertung: </string>
    <string name="spinnerTitle">4. Spinner und ListActivity</string>
    <string name="spinnerText">Wähle einen der folgenden Informatik-Kurse</string>
    <string name="stateSaveTitle">6. Zustands-Zwischenspeicherung</string>
    <string name="stateSaveText">Drücke den Knopf einige Male. Ein Toast mit dem internen Zählerstand wird angezeigt. Drehe das Device von Protrait in Landscape Mode. Der Zähler wird zurückgesetzt! Das darf nicht sein…</string>
    <string name="stateSaveButtonText">Internen Zustand hochzählen</string>
    <string name="dialogTitle">7. Dialoge und Notifications</string>
    <string name="dialogWithDataMessage">"Kühlwasserzufuhr unterbrochen! \n Was nun?"</string>
    <string name="dialogWithDataPos">Abschalten</string>
    <string name="dialogWithDataToastPos">Reaktor wird abgeschaltet…</string>
    <string name="dialogWithDataNeu">Weiss nicht</string>
    <string name="dialogWithDataToastNeu">Problem an Support weitergeleitet…</string>
    <string name="dialogWithDataNeg">Abwarten</string>
    <string name="dialogWithDataToastNeg">OK, wir warten ab</string>
    <string name="customDialogText">Was empfinden Sie, wenn Sie dieses Bild ansehen?</string>
    <string name="customDialogButton">Abschicken</string>
</resources>
