<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alex.ui_demo.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/paddingTitlePurple"
                android:background="@color/purple"
                android:text="@string/layoutTitle"
                android:textSize="@dimen/titlePurple"
                />

            <TextView
                android:id="@+id/layoutChooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layoutText"
                android:textSize="13sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobutton_linearLayout"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:onClick="LinearLayout"
                    android:text="@string/linearLayout" />

                <RadioButton
                    android:id="@+id/radiobutton_relativeLayout"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:onClick="RelativeLayout"
                    android:text="@string/relativeLayout" />

            </RadioGroup>

            <TextView
                android:id="@+id/titleOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/paddingTitlePurple"
                android:background="@color/purple"
                android:text="@string/orientationTitle"
                android:textSize="@dimen/titlePurple"
                />

            <TextView
                android:id="@+id/textOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/paddingTitlePurple"
                android:text="@string/orientationText" />

            <TextView
                android:id="@+id/titleViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:paddingVertical="@dimen/paddingTitlePurple"
                android:text="@string/titleViews"
                android:textSize="@dimen/titlePurple" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewsButtonText"
                android:onClick="ViewsDemos"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>


